--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "@vercel/speed-insights": "^1.0.9",
     "clsx": "^2.1.0",
     "hash-wasm": "^4.11.0",
     "lucide-react": "^0.323.0",
