--- a/package.json
+++ b/package.json
@@ -26,39 +26,48 @@
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
-    "@vercel/analytics": "^1.1.3",
-    "@vercel/speed-insights": "^1.0.9",
+    "@vercel/analytics": "^1.2.0",
+    "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.0",
     "hash-wasm": "^4.11.0",
-    "lucide-react": "^0.323.0",
+    "lucide-react": "^0.331.0",
     "ms": "^2.1.3",
     "nanoid": "^5.0.5",
     "next": "^14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype-mathjax": "^6.0.0",
+    "rehype-stringify": "^10.0.0",
+    "remark": "^15.0.1",
+    "remark-html": "^16.0.1",
+    "remark-math": "^6.0.0",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.1",
+    "unified": "^11.0.4",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.6.0",
-    "@commitlint/config-conventional": "^18.6.0",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@types/eslint": "^8.44.7",
     "@types/lint-staged": "^13.3.0",
     "@types/ms": "^0.7.34",
-    "@types/node": "^20.11.17",
-    "@types/react": "^18.2.37",
+    "@types/node": "^20.11.19",
+    "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4",
     "eslint-plugin-tailwindcss": "^3.14.2",
-    "husky": "^9.0.10",
+    "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
